# Neo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  agents.md  eslint.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.ps1  todo.md  uninstall-project.ps1  一键安装启动.bat  一键清理卸载.bat
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/actions/setup-js/: action.yml
.github/scripts/: check-release-version.mjs  prepare-release-metadata.mjs
.github/workflows/: dependency-review.yml  pr-check.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/public/: uninstall.html
apps/desktop/scripts/: long-conversation.fixture.test.ts  long-conversation.fixture.ts
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: comfy.rs  db.rs  file.rs  lan.rs  lib.rs  search.rs  server.rs  store.rs
apps/mobile/: .watchmanconfig  App.tsx  README.md  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/harmony/: .gitignore  oh-package-lock.json5  oh-package.json5
docs/: mobile-architecture.md
docs/en/: index.md
docs/en/developer/: architecture.md  building.md  ci-release.md  contributing.md  i18n.md  prompt-pipeline.md  storage.md  theming.md  (+1 more)
docs/zh/: index.md
patches/: @react-native-oh__react-native-harmony-cli@0.84.1.patch
(+388 files in other folders)
