[package]
name = "neo-tavern-desktop"
version = "0.1.2"
description = "Whale Play"
authors = ["Whale Play"]
edition = "2021"

[lib]
name = "neo_tavern_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
rfd = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
